building the cross validator

--- a/naive_lstm/BiLSTM-CNN.ipynb
+++ b/naive_lstm/BiLSTM-CNN.ipynb
@@ -1569,15 +1569,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3380 2684\n",
-      "62.3373% 78.5022%\n"
+      "3380 3095\n",
+      "68.9053% 75.2504%\n"
      ]
     }
    ],
@@ -1587,15 +1587,15 @@
     "hidden_size = 256\n",
     "output_size = 1\n",
     "model = DecoderRNN(input_size, augmented_size, hidden_size, output_size).to(device)\n",
-    "model.load_state_dict(torch.load(\"/home/yiqin/2018summer_project/saved_model/Bi-LSTM-CNN_best.pt\"))\n",
+    "model.load_state_dict(torch.load(\"/home/yiqin/2018summer_project/saved_model/HallofFame/Bi-LSTM-CNN1.pt\"))\n",
     "prediction = evaluate(model, val_X)\n",
-    "acc, one_acc = validate(model, val_X,val_Y, 0.5)\n",
+    "acc, one_acc = validate(model, val_X,val_Y, 0.52)\n",
     "print(acc, one_acc)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "metadata": {
     "collapsed": true
    },
@@ -1604,6 +1604,140 @@
     "import pickle\n",
     "f = open(\"/home/yiqin/2018summer_project/prediction/BiLSTM-CNN.pkl\", \"wb\")\n",
     "pickle.dump(prediction, f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def factorize(data_X, data_Y, flag):\n",
+    "    if flag:\n",
+    "        new_X = []\n",
+    "        new_Y = []\n",
+    "        for i in range(len(data_X)):\n",
+    "            X, Y = data_X[i], data_Y[i]\n",
+    "            flag = []\n",
+    "            for loc, j in enumerate(Y):\n",
+    "                if j == 1:\n",
+    "                    flag.append(loc)\n",
+    "            prev = 0\n",
+    "            for j in range(4, len(flag), 5):\n",
+    "                new_X.append(X[prev:flag[j]])\n",
+    "                new_Y.append(torch.from_numpy(Y[prev:flag[j]]))\n",
+    "                prev = flag[j]\n",
+    "    return new_X, new_Y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "73\n"
+     ]
+    }
+   ],
+   "source": [
+    "from copy import deepcopy\n",
+    "\n",
+    "class CrossValidator:\n",
+    "    def __init__(self, model, compute_acc, partition=5, decoder=None, batch_size=BATCH_SIZE, epochs=10, lr=1e-2, augment_data=True, print_every = 1000, plot_every = 100):\n",
+    "        self.model=model\n",
+    "        with open(\"/home/yiqin/2018summer_project/data/smooth_3d1s_augmented.pkl\", \"rb\") as f:\n",
+    "            data= pickle.load(f)\n",
+    "            \n",
+    "        self.data_size=len(self.data_X)\n",
+    "        self.partition=partition\n",
+    "        self.decoder=decoder\n",
+    "        self.compute_acc=compute_acc\n",
+    "        self.train_X=[]\n",
+    "        self.train_Y=[]\n",
+    "        self.val_X=[]\n",
+    "        self.val_Y=[]\n",
+    "        self.precision_history=[]\n",
+    "        self.recall_history=[]\n",
+    "        self.loss_history=[]\n",
+    "        self.batch_size=batch_size\n",
+    "        self.epochs=epochs\n",
+    "        self.lr=lr\n",
+    "        self.augment_data_flag=augment_data\n",
+    "        self.print_every = print_every\n",
+    "        self.plot_every = plot_every\n",
+    "        \n",
+    "        \n",
+    "    def create_data(self, part):\n",
+    "        train_X=[]\n",
+    "        train_Y=[]\n",
+    "        val_X=[]\n",
+    "        val_Y=[]\n",
+    "        cut=int(self.data_size/self.partition)\n",
+    "        for i in range(self.data_size):\n",
+    "            if i<cut*part or i>=cut*(part+1):\n",
+    "                train_X.append(np.array(self.data_X[i]))\n",
+    "                train_Y.append(np.array(self.data_Y[i]))\n",
+    "            else:\n",
+    "                val_X.append(np.array(self.data_X[i]))\n",
+    "                val_Y.append(np.array(self.data_Y[i]))\n",
+    "        return train_X, train_Y, val_X, val_Y\n",
+    "    \n",
+    "    def tensorize(self, p):\n",
+    "        p=np.array(p)\n",
+    "        p=torch.from_numpy(p).float()\n",
+    "        p=p.to(device)\n",
+    "        return p\n",
+    "    \n",
+    "    def compute(self):\n",
+    "        for i in range(self.partition):\n",
+    "            start = time.time()\n",
+    "            temptrain_X, temptrain_Y, tempval_X, tempval_Y = self.create_data(i)\n",
+    "            self.train_X, self.train_Y = factorize(temptrain_X, temptrain_Y)\n",
+    "            self.val_X, self.val_Y = factorize(tempval_X, tempval_Y)\n",
+    "            print(i, \"phase 1 completed.\")\n",
+    "            \n",
+    "            cur_model = deepcopy(self.model).to(device)\n",
+    "            \n",
+    "            optimizer = optim.SGD(cur_model.parameters(), lr = self.lr)\n",
+    "    \n",
+    "            criterion = nn.MSELoss()\n",
+    "\n",
+    "            scheduler = optim.lr_scheduler.StepLR(optimizer, step_size = 1, gamma = gamma)\n",
+    "\n",
+    "            print_loss_total = 0\n",
+    "            plot_loss_total = 0\n",
+    "            \n",
+    "            for j in range(self.epochs):\n",
+    "                print(\"epoch %i\"%j)\n",
+    "                for num in range(len(self.train_X)):\n",
+    "                    input_tensor = train_X[num].to(device).float()\n",
+    "                    target_tensor = target_Tensor[num].to(device).float()\n",
+    "                    \n",
+    "                    verbose = (num%1000) = 0\n",
+    "                    \n",
+    "                    loss = train(input_tensor, target_tensor, cur_model, \n",
+    "                                 optimizer, criterion, verbose = verbose)\n",
+    "                    print_loss_total += loss\n",
+    "                    plot_loss_total += loss\n",
+    "\n",
+    "                    if iter % self.print_every == 0:\n",
+    "                        acc, one_acc = validate(cur_model, self.val_X, self.val_Y)\n",
+    "                        print_loss_avg = print_loss_total / self.print_every\n",
+    "                        print_loss_total = 0\n",
+    "                        print('%s (%d %d%%) %.4f' % (timeSince(start, iter / n_iters),\n",
+    "                                                     iter, iter / n_iters * self.print_every, print_loss_avg))\n",
+    "\n",
+    "                        print(\"validation accuracy:\", acc)\n",
+    "                        print(\"validation prediction accuracy:\", one_acc)\n",
+    "                        #torch.save(decoder.state_dict(), 'naive_lstm_train.pt')\n",
+    "\n",
+    "                scheduler.step()\n"
    ]
   },
   {
